--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
     "name": "johnny/tools",
     "description": "The php tools",
-    "keywords": ["php", "tools", "windows mkdir"],
     "license": "MIT",
-    "version": "1.0.0",
     "authors": [
         {
-            "name": "johnny",
+            "name": "Johnny",
             "email": "johnny.joyful@gmail.com"
         }
     ],
