--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,5 @@
             "Johnny\\Tools\\": "src/"
         }
     },
-    "minimum-stability": "dev-master"
+    "minimum-stability": "dev"
 }
