--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "johnny/tools",
     "description": "The php tools",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Johnny",
